# ChangeLog for dev-libs/redland
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/redland/ChangeLog,v 1.64 2010/01/19 00:27:39 jer Exp $

  19 Jan 2010; Jeroen Roovers <jer@gentoo.org> redland-1.0.10-r1.ebuild:
  Stable for HPPA (bug #301306).

  10 Jan 2010; Samuli Suominen <ssuominen@gentoo.org>
  redland-1.0.10-r1.ebuild:
  Disable threading as it's not supported (upstream) and add dev-db/unixODBC
  support for virtuoso storage backend.

  01 Jan 2010; Jonathan Callen <abcd@gentoo.org> redland-1.0.10-r1.ebuild:
  Add prefix keywords

  27 Dec 2009; Raúl Porcel <armin76@gentoo.org> redland-1.0.9-r1.ebuild,
  redland-1.0.9-r2.ebuild, redland-1.0.10.ebuild, redland-1.0.10-r1.ebuild:
  Add ~arm

*redland-1.0.10-r1 (18 Dec 2009)

  18 Dec 2009; Samuli Suominen <ssuominen@gentoo.org>
  +redland-1.0.10-r1.ebuild,
  +files/redland-1.0.10-librdf_storage_register_factory.patch:
  LIBADD librdf.la for librdf_storage_virtuoso.so wrt #297363.

*redland-1.0.10 (17 Dec 2009)

  17 Dec 2009; Samuli Suominen <ssuominen@gentoo.org>
  +redland-1.0.10.ebuild:
  Version bump.

*redland-1.0.9-r2 (11 Dec 2009)

  11 Dec 2009; Samuli Suominen <ssuominen@gentoo.org>
  +redland-1.0.9-r2.ebuild:
  Revision bump for sys-libs/db:4.8.

  31 Oct 2009; Brent Baude <ranger@gentoo.org> redland-1.0.9-r1.ebuild:
  Marking redland-1.0.9-r1 ppc64 for bug 285110

  13 Oct 2009; Raúl Porcel <armin76@gentoo.org> redland-1.0.9-r1.ebuild:
  ia64/sparc stable wrt #285110

  29 Sep 2009; Samuli Suominen <ssuominen@gentoo.org>
  redland-1.0.9-r1.ebuild:
  RESTRICT="test" because it's known to fail wrt #285110.

  27 Sep 2009; nixnut <nixnut@gentoo.org> redland-1.0.9-r1.ebuild:
  ppc stable #285110

  25 Sep 2009; Markus Meier <maekke@gentoo.org> redland-1.0.9-r1.ebuild:
  amd64 stable, bug #285110

  18 Sep 2009; Jeroen Roovers <jer@gentoo.org> redland-1.0.9-r1.ebuild:
  Stable for HPPA (bug #284340).
