@@ -1,4 +1,4 @@
 DIST redland-bindings-1.0.10.1.tar.gz 726598 RMD160 b104e70e67b85da22dd99bb69302a1b4a502b460 SHA1 8c0248543881504850e2a705247fa787baa4754b SHA256 66361a05d85c0cbbc9b845341f709821c58add8307bde1eb5bdb7bb3bf761e94
-EBUILD redland-bindings-1.0.10.1-r1.ebuild 1437 RMD160 41d6a79cb4f07604f87818871473622920132375 SHA1 db03ebbc33d9a1e43f529cb9507a3e935891e0ac SHA256 e308c7abe2f9d07eed15b82b9a7405de0039c30ff866e8f5dc0f3ecfa445529f
-MISC ChangeLog 3263 RMD160 fdc32363c7c853d03b1d2fb26c6d18d27b6e0f59 SHA1 abc56424142c5fd01f53a11f5585281b28121322 SHA256 22fc101145c61300f4de1fc2c003f3ac0a08d3ddc66edeaaddbb666f83cc49f1
+EBUILD redland-bindings-1.0.10.1-r1.ebuild 1457 RMD160 6dea3bda498dc8013688be60cb64d698eb25e096 SHA1 f18ba7ddc1e750ff8dba75c248c66f8cfe4dfa92 SHA256 3b2b4afc4670c0b4ed110c490c50b388778fbe2b4cd7f185cff46325eac69554
+MISC ChangeLog 3401 RMD160 f1bb1444748cd3e9179d8405e76a10132e509aa1 SHA1 4578926231c83a27227b2f0a571bc8688291680e SHA256 73d72c03cc1b936723f66f86bf5c5fe7d9c71f550cc00cfa17758b99059593ca
 MISC metadata.xml 158 RMD160 6842e2189a50bd8a98e84802c38180ac1421c00e SHA1 703cea5a2109d41f7c87993c1f01d418a4c85174 SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b
