@@ -4,7 +4,8 @@ AUX redland-1.0.9-librdf_storage_register_factory.patch 7323 RMD160 3660a5e7f7a5
 AUX redland-1.0.9-sqlite.patch 11435 RMD160 af47acd86df95d9ed29b7d2904549db1225a9fbd SHA1 8640db5ff5f9505850fef77b9c2eedb16a6583d8 SHA256 cc2f13bfa8ca3ed2e189062cf305b5c0bd807e136cbf78fd675ce6ef0412fca1
 DIST redland-1.0.10.tar.gz 1569554 RMD160 c19a0aa6c33a62719af1b2ba35ea064ffdf7e9f1 SHA1 e4ba2ef207f293a7740f45661ec90cf9698e217f SHA256 e3060d05de27c72fb1d1c8ebb698006462abcb96bff98511c0baf08d85389815
 DIST redland-1.0.9.tar.gz 1544049 RMD160 a3fc1b4c819ac06e1f5308e2c246c6b784796e0e SHA1 74c9ce4b496095d404593a18af1d15de4904ae9b SHA256 aa90ded84f5dd4cc2330bf79d139e00ceb93c6a9b94d17e1a93449ad579e1524
-EBUILD redland-1.0.10-r1.ebuild 1931 RMD160 21b853ae194524e8ea4b53a0b9117f02f29841b0 SHA1 eb05fe98449b2dc58c56726a9f9360b9d7c04603 SHA256 2e1cfba908bffb9d810a067ce850706157b6877534e565a040e41ca378bfbd4e
+EBUILD redland-1.0.10-r1.ebuild 1850 RMD160 0d21bbd0937a433d9477cea0d66b4eed56039ca5 SHA1 c7f5d7f542a664dc6cc4db59a8b2e4dc8bc39ffc SHA256 f249ed15edaf6e7488d6e7f562dea6eec60cabd865ddd214d6bff77484f2e70d
+EBUILD redland-1.0.10-r2.ebuild 1923 RMD160 3aa073d4a6ab40873e97a5a25a1ae01176fad142 SHA1 d1ac743af1ee2982876d4134908abed4b567b140 SHA256 58db2d5405ce6ee3b38d3050b94661cff3240f8b6ccd642a774450cf0da38e2f
 EBUILD redland-1.0.9-r1.ebuild 2008 RMD160 df6d60c2527639ab7f236a49595b8ddb4670bc83 SHA1 8ad246aa37d0fcf579cd9aba6eca08fa6e62b8fe SHA256 384c2a77dc790681cdced116d68d4c1780db3bd4b94f78bad3e7a74b4fe235e7
-MISC ChangeLog 8702 RMD160 0cb06ae02a7946cab007366efc4f649e177fa800 SHA1 c5153f8c0074e510adfac570c6c240b28c88d7ab SHA256 af6956e1fadacb892ca92c25ac487988ae37233d0781d121124f4a24ff72e965
+MISC ChangeLog 8960 RMD160 a17a1b3e8880884777b92196b61e66fd7e6f10cd SHA1 94dd2f7925790b35ce6711c958e0b33b5caffb16 SHA256 c5662f5e66fc5957b757ee55273c316a553359570304ef09c9a2d4b7d71a29ac
 MISC metadata.xml 158 RMD160 6842e2189a50bd8a98e84802c38180ac1421c00e SHA1 703cea5a2109d41f7c87993c1f01d418a4c85174 SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b
