@@ -1,8 +1,8 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/redland/redland-1.0.10-r1.ebuild,v 1.6 2010/02/10 20:40:21 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/redland/redland-1.0.10-r2.ebuild,v 1.1 2010/02/10 20:40:21 grobian Exp $
 
-EAPI=2
+EAPI=3
 inherit autotools eutils
 
 DESCRIPTION="High-level interface for the Resource Description Framework"
@@ -11,7 +11,7 @@ SRC_URI="http://download.librdf.org/source/${P}.tar.gz"
 
 LICENSE="Apache-2.0 GPL-2 LGPL-2.1"
 SLOT="0"
-KEYWORDS="~amd64 ~arm hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
+KEYWORDS="~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos"
 IUSE="berkdb iodbc mysql odbc postgres sqlite ssl xml"
 
 RDEPEND="mysql? ( virtual/mysql )
@@ -60,7 +60,7 @@ src_configure() {
 		$(use_with sqlite) \
 		$(use_with postgres postgresql) \
 		--without-threads \
-		--with-html-dir=/usr/share/doc/${PF}/html \
+		--with-html-dir="${EPREFIX}"/usr/share/doc/${PF}/html \
 		${myconf}
 }
 
